--- a/templates/bank_system/list_view.html
+++ b/templates/bank_system/list_view.html
@@ -106,7 +106,7 @@
             <td>{{ data.balance }} $</td>
             <td>
               <a
-                href="http://aa1-a.herokuapp.com/bank_system/form/{{ data.id }}"
+                href="http://banking1system.herokuapp.com/bank_system/form/{{ data.id }}"
                 style="text-decoration: none; color: black"
                 >Transfer</a
               >
